comecei a escrever o conteudo

--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 <body>
     <main>
         <header>
-            <h1>Titulo do Site</h1>
+            <h1>Curso Gratis</h1>
         </header>
         <article> 
-            <h2> Artigo 001</h2>
-            <p>Texto do Artigo 001</p>
+            <h2>Curso de HTML 5 com CSS3</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, nostrum. Voluptatibus, quod tempore autem expedita ab eligendi velit, nulla eius maxime quae omnis ut quo quis obcaecati harum, odio tenetur.</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto Artigo 002</p>
+            <h2>Curso de JavaScript</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti maxime iusto ex fugit neque? Nihil inventore ipsa neque earum enim cum? Nisi commodi hic ipsam asperiores consequatur. Aliquid, architecto nesciunt.</p>
         </article>
     </main>
 </body>
